--- a/MM Systems/WebApp/WebApp/DialogBoxes/AddActivity.xaml
+++ b/MM Systems/WebApp/WebApp/DialogBoxes/AddActivity.xaml
@@ -18,8 +18,8 @@
         </Grid>
         <StackPanel>
         <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Categorie" Margin="0,0,35,0"></TextBlock>
-                <ComboBox ItemsSource="{Binding}" Name="cb_Categorie" Margin="0"></ComboBox>
+                <TextBlock Text="Categorie" Margin="0,0,30,0"></TextBlock>
+                <ComboBox ItemsSource="{Binding}" Name="cb_Categorie" Margin="0" MinWidth="100"></ComboBox>
         </StackPanel>
         
         <StackPanel Grid.Column="0" Orientation="Horizontal">
