Added login for the web app edited the wcf service for getting the user info

--- a/MM Systems/WebApp/WebApp/MainPage.xaml
+++ b/MM Systems/WebApp/WebApp/MainPage.xaml
@@ -4,13 +4,16 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
     xmlns:uriMapper="clr-namespace:System.Windows.Navigation;assembly=System.Windows.Controls.Navigation"
+    xmlns:login="clr-namespace:WebApp.UC"
+
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480">
+    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480"
+>
 
     <Grid x:Name="LayoutRoot" Style="{StaticResource LayoutRootGridStyle}">
 
         <Border x:Name="ContentBorder" Style="{StaticResource ContentBorderStyle}">
-
+            
             <navigation:Frame x:Name="ContentFrame" Style="{StaticResource ContentFrameStyle}" 
                               Source="/Home" Navigated="ContentFrame_Navigated" NavigationFailed="ContentFrame_NavigationFailed">
                 <navigation:Frame.UriMapper>
@@ -51,7 +54,7 @@
                     <Rectangle x:Name="Divider3" Style="{StaticResource DividerStyle}"/>
 
                     <HyperlinkButton x:Name="Link4" Style="{StaticResource LinkStyle}" 
-                                     NavigateUri="/Afmelden" TargetName="ContentFrame" Content="Afmelden"/>
+                                    Click="Afmelden" TargetName="ContentFrame" Content="Afmelden"/>
 
                 </StackPanel>
             </Border>
