--- a/MM Systems/WebApp/WebApp/Views/Home.xaml
+++ b/MM Systems/WebApp/WebApp/Views/Home.xaml
@@ -1,36 +1,42 @@
 ﻿<navigation:Page x:Class="WebApp.Home" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:login="clr-namespace:WebApp.UC"
+
     xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
-    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480"
+                 mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480"
     Title="Home"
-    Style="{StaticResource PageStyle}">
+    Style="{StaticResource PageStyle}"
+                 
+>
 
     <Grid x:Name="LayoutRoot">
-        
-        <ScrollViewer x:Name="PageScrollViewer" Style="{StaticResource PageScrollViewerStyle}">
 
+        <login:Login x:Name="login" Visibility="Visible"></login:Login>
+
+        <ScrollViewer x:Name="PageScrollViewer" Style="{StaticResource PageScrollViewerStyle}">
             <StackPanel x:Name="ContentStackPanel">
 
                 <TextBlock HorizontalAlignment="Center" x:Name="HeaderText" Style="{StaticResource HeaderTextStyle}" 
                                    Text="Homepage"/>
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Border BorderThickness="1" BorderBrush="Gray" Width="200" Padding="0" Margin="0,0,10,0">
-                <Grid Width="200" x:Name="btn_GebruikerToevoegen" MouseLeftButtonDown="btn_GebruikerToevoegen_MouseLeftButtonDown" Cursor="Hand">
-                <StackPanel>
-                <Rectangle Width="200" Height="147">
-                    <Rectangle.Fill>
-                        <ImageBrush  ImageSource="/WebApp;component/icon-user.jpg"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                    <Grid>
-                        <Rectangle Width="200" Height="53" Fill="White"/>
-                        <TextBlock HorizontalAlignment="Center" Text="Gebruiker toevoegen" VerticalAlignment="Center"></TextBlock>
-                    </Grid>
-                </StackPanel>
-                </Grid>
-                </Border>
+                    <Border BorderThickness="1" BorderBrush="Gray" Width="200" Padding="0" Margin="0,0,10,0">
+                        <Grid Width="200" x:Name="btn_GebruikerToevoegen" MouseLeftButtonDown="btn_GebruikerToevoegen_MouseLeftButtonDown" Cursor="Hand">
+                            <StackPanel>
+                                <Rectangle Width="200" Height="147">
+                                    <Rectangle.Fill>
+                                        <ImageBrush  ImageSource="/WebApp;component/icon-user.jpg"/>
+                                    </Rectangle.Fill>
+                                </Rectangle>
+                                <Grid>
+                                    <Rectangle Width="200" Height="53" Fill="White"/>
+                                    <TextBlock HorizontalAlignment="Center" Text="Gebruiker toevoegen" VerticalAlignment="Center"></TextBlock>
+                                </Grid>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
                     <Border Margin="0,0,10,0" BorderThickness="1" BorderBrush="Gray" Width="200">
                         <Grid Width="200" x:Name="btn_Actiteittoevoegen"  Cursor="Hand" MouseLeftButtonDown="btn_Actiteittoevoegen_MouseLeftButtonDown">
                             <StackPanel>
@@ -63,7 +69,7 @@
                     </Border>
                 </StackPanel>
             </StackPanel>
-            
+
         </ScrollViewer>
     </Grid>
 
