--- a/MM Systems/WebApp/WebApp/UC/Login.xaml
+++ b/MM Systems/WebApp/WebApp/UC/Login.xaml
@@ -33,7 +33,7 @@
                              Grid.Column="2" Grid.Row="1"
                              Width="200" Margin="5 5"
                              HorizontalAlignment="Left"
-                             Password="{Binding Password, Mode=TwoWay}"/>
+                             Password="{Binding Password, Mode=TwoWay}" KeyUp="txtPassword_KeyUp" />
                 <StackPanel Grid.Column="2" Grid.Row="2"
                             Orientation="Horizontal"
                             Width="200" Height="25"
