--- a/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
@@ -166,10 +166,10 @@
                             </Grid.RowDefinitions>
                             <StackPanel>
                                 <TextBlock Text="Categorie"></TextBlock>
-                                <toolkit:ListPicker Margin="10 0 0 0" ItemsSource="{Binding}"  x:Name="lp_Categorien" SelectionChanged="lp_Categorien_SelectionChanged">
+                                <toolkit:ListPicker Margin="10 0 0 0" ItemsSource="{Binding}"  x:Name="lp_Categorien" >
                                 </toolkit:ListPicker>
                                 <TextBlock Text="Activiteit"></TextBlock>
-                                <toolkit:ListPicker Margin="10 0 0 0" ItemsSource="{Binding}" x:Name="lp_Activiteiten" IsEnabled="True" SelectionChanged="lp_Activiteiten_SelectionChanged">
+                                <toolkit:ListPicker Margin="10 0 0 0" ItemsSource="{Binding}" x:Name="lp_Activiteiten" IsEnabled="True" >
                                     <toolkit:ListPicker.ItemTemplate>
                                         <DataTemplate>
                                             <TextBlock Tag="{Binding Activiteit_ID}" Text="{Binding Activiteit}"></TextBlock>
